--- a/vistas/agregar.html
+++ b/vistas/agregar.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/alertify.min.css"/>
-	<link rel="stylesheet" href="css/themes/bootstrap.min.css"/>
+	  <link rel="stylesheet" href="css/themes/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/stylelogin.css">
     <script src="https://code.jquery.com/jquery-2.2.0.js"></script>
+    <script src="js/alertify.min.js"></script>
     <script src="js/scriptAgregar.js"></script>
   </head>
   <body>
