--- a/vistas/estadisticas.html
+++ b/vistas/estadisticas.html
@@ -10,7 +10,6 @@
   <meta property="og:description"   content="Juegos y demas" />
   <meta property="og:image"         content="http://trikatuka.com/img/trikatuka.png" />
 
-
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/alertify.min.css"/>
   <link rel="stylesheet" href="css/themes/bootstrap.min.css"/>
@@ -18,7 +17,7 @@
   <script src="https://code.jquery.com/jquery-2.2.0.js"></script>
   <script src="js/alertify.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="js/scriptEventos.js"></script>
+  <script src="js/scriptEstadisticas.js"></script>
 </head>
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
@@ -29,12 +28,6 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 <body>
-<div style="display:none">
-  <p id="idUser">{{user._id}}</p>
-  <p id="idEvent">{{idEvent}}</p>
-  <p id="token">{{token}}</p>
-  <p id="numPart">{{datos.numParticipantes}}</p>
-</div>
 <nav class="navbar navbar-default navbar-static-top" role="navigation">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -53,62 +46,23 @@
       <ul class="nav navbar-nav">
         <li><a href="/profile">Inicio</a></li>
         <li><a href="/eventos">Eventos</a></li>
-        <li class="active"><a href="/evento">Evento</a></li>
+        <li class="active"><a href="/estadisticas">Estadisticas</a></li>
         <li><a href="/logout">Cerrar Sesión</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </nav>
-
   <div class="section group">
   <div class="col span_1_of_3">
   Publicidad
   </div>
   <div class="col span_2_of_3">
   <h2>{{datos.nombre}}</h2>
-  <div id="infoEvento">
-    <span><b>Descripción: </b><p>{{datos.descripcion}}</p> </span>
-    <span><b>Fecha Inicial: </b><p>{{datos.fechaIni}}</p> <b>Fecha Final: </b><p>{{datos.fechaFin}}</p></span>
-    <span><b>Número de Participantes: </b><p>{{datos.numParticipantes}}</p> </span>
-    <span><b>Terminos y Condiciones: </b><p>{{datos.terminos}}</p> </span>
+  <div id="info">
   </div>
-    <button type="button" id="GeneraToken" style="border-radius: 20px" class="btn btn-success btn-block" data-toggle="modal" data-target="#CrearSala">Participar</button>
   </div>
   <div class="col span_3_of_3">
   Publicidad
   </div>
-</div>
-
-<div class="container">
-<!-- Modal -->
-<div id="CrearSala" class="modal fade" role="dialog">
-  <div class="modal-dialog">
-    <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <center><h4 class="modal-title">Crea tu partida</h4></center>
-      </div>
-      <div class="modal-body">
-        <center><label for="usr"><b>Paso 1: </b>Dale un nombre a tu equipo:</label></center>
-        <input type="text" class="form-control" id="nomGrup" placeholder="Ej. El Combo"> 
-        <br>
-        <center><b>Paso 2: </b>Para jugar necesitas un equipo de {{datos.numParticipantes}} integrantes, invita a tus amigos.
-        <div class="fb-send" data-href="http://trikatuka.com/agregar?token={{token}}"></div>
-        
-        <!--<div class="fb-send" data-href="http://trikatuka.com/agregar?idUser={{user._id}}&idEvent={{idEvent}}"></div>-->
-        </center>
-        <br>  
-        <center>
-          <button type="button" id="SEspera" style="border-radius: 20px" class="btn btn-info btn-block" data-toggle="modal"><b>Paso 3: </b> Crear Equipo</button>
-        </center>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
-      <!-- rocketLawyer.com-->
-    </div>
-  </div>
- </div>
 </div>
 
   </body>
