--- a/vistas/profile.html
+++ b/vistas/profile.html
@@ -65,7 +65,8 @@
         </div>
     </div>
     <br>
-    <div style="width: 200px; margin: 0 auto;">
+    <div style="width: 400px; margin: 0 auto;">
+      <a type="button" href="/estadisticas" class="btn btn-info btn-lg" >Estadísticas</a>
       <a type="button" href="/eventos" class="btn btn-info btn-lg" >Participar</a>
     </div>
   </div>
