--- a/vistas/grupos.html
+++ b/vistas/grupos.html
@@ -2,7 +2,14 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, user-scalable=no">
+  <meta name="google" value="notranslate">    
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=0.5, maximum-scale=0.5, user-scalable=no" />
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <link rel="apple-touch-icon-precomposed" href="img/icono.png"/>
+  <link rel="shortcut icon" type="image/png" href="img/icono.png"/> 
+  <link rel = "manifest" href = "manifest.json">
   <title>TrikaTuka</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/alertify.min.css"/>
