--- a/vistas/profile.html
+++ b/vistas/profile.html
@@ -3,6 +3,14 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="google" value="notranslate">    
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=0.5, maximum-scale=0.5, user-scalable=no" />
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <link rel="apple-touch-icon-precomposed" href="img/icono.png"/>
+  <link rel="shortcut icon" type="image/png" href="img/icono.png"/> 
+  <link rel = "manifest" href = "manifest.json">
   <title>{{title}}</title>
   <meta name="Resource-type" content="Document" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
